manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-storage-volume
          persistentVolumeClaim:
            claimName: todo-storage-claim
      containers:
        - name: todo-app
          image: TODO-FRONTEND
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: todo-storage-volume
              mountPath: /usr/src/files/images
        - name: todo-backend
          image: TODO-BACKEND
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: todo-storage-volume
              mountPath: /usr/src/files/images
          readinessProbe:
            initialDelaySeconds: 80
            periodSeconds: 5
            httpGet:
               path: /db-diagnosis
               port: 3001
          livenessProbe:
            initialDelaySeconds: 80
            periodSeconds: 5
            httpGet:
               path: /
               port: 3001
