manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 1234
      targetPort: 3000
    - name: backend-port
      port: 1235
      protocol: TCP
      targetPort: 3001
    - name: broadcaster-port
      port: 1236
      protocol: TCP
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
